Change in 6 Sprint