@@ -7,38 +7,48 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.Arrays;
 import java.util.List;
 
+import static org.junit.Assert.assertEquals;
 
-@RunWith(MockitoJUnitRunner.class)
-public class LionTest {
+
+    @RunWith(MockitoJUnitRunner.class)
+    public class LionTest {
+
+    Lion lion;
+
     @Mock
     Feline feline;
 
     @Test
-    public void getKittensTest() throws Exception {
-        Lion lion = new Lion("Самец", feline);
-        int expectedKittensCount = 0;
-        int actualKittensCount = lion.getKittens();
-        Assert.assertEquals(expectedKittensCount, actualKittensCount);
+    public void lionGetKittenTestPositive() throws Exception {
+
+        String sex = "Самец";
+        lion = new Lion(sex, feline);
+        Mockito.when(feline.getKittens()).thenReturn(1);
+        assertEquals(1, lion.getKittens());
+
     }
 
     @Test
-    public void getFoodLionTest() throws Exception{
-        Lion lion = new Lion("Самец", feline);
-        Mockito.when(lion.getFood()).thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
-        List<String> expectedFood = List.of("Животные", "Птицы", "Рыба");
-        List<String>actualFood = lion.getFood();
-        Assert.assertEquals(expectedFood, actualFood);
+    public void lionUnknownAnimalTest() {
+
+        Exception exception = Assert.assertThrows(Exception.class, () -> {
+            Lion lion = new Lion("неизвестный",feline);
+        });
+        assertEquals("Используйте допустимые значения пола животного - самец или самка", exception.getMessage());
+
     }
 
     @Test
-    public void getVeganTest() throws Exception{
-        Lion lion = new Lion("Самец", feline);
-        Mockito.when(lion.getFood()).thenReturn(Arrays.asList("Трава", "Различные растения"));
-        List<String>expectedVeganFood = List.of("Трава", "Различные растения");
-        List<String>actualFood = lion.getFood();
-        Assert.assertEquals(expectedVeganFood, actualFood);
+    public void lionGetFoodMeat() throws Exception {
+
+        String sex = "Самка";
+        Lion lion = new Lion(sex,feline);
+        Mockito.when(feline.getFood("Хищник")).thenReturn(List.of("Животные, Птицы, Рыба"));
+        List<String> actual = lion.getFood();
+        assertEquals(List.of("Животные, Птицы, Рыба"), actual);
+
     }
+
 }
